feat(api): /search filtering and sorting
